fix(frontend): display on smaller screens
+ add scroll to pages

--- a/frontend/src/app/features/containers-page/containers-page-table/containers-page-table.scss
+++ b/frontend/src/app/features/containers-page/containers-page-table/containers-page-table.scss
@@ -1,5 +1,6 @@
 :host {
   width: 100%;
+  overflow-y: auto;
 
   .ports {
     display: flex;
