--- a/frontend/src/app/features/containers-page/containers-page.scss
+++ b/frontend/src/app/features/containers-page/containers-page.scss
@@ -3,4 +3,6 @@
   flex-direction: column;
   width: 100%;
   gap: 12px;
+  overflow: hidden;
+  max-height: 100%;
 }
